# rethink-sync

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PRD.md  README.md  auth.py  cancelled_appointments.py  config.py  logger.py  main.py  models.py  overterm_dashboard.py  pyproject.toml  requirements.txt  rethink_automation_documentation.tex  rethink_sync.py  rethink_sync_org.py
